# RAG_ChatBot

./: .gitignore  Dockerfile  README.md  chatbot_ui.py  pyproject.toml  requirements.txt
app/: dependencies.py  main.py
app/document_loader/: chunker.py  loader.py  semantic_chunker.py
app/models/: vector_models.py
app/routers/: documents.py  items.py  neural_search.py  users.py  vectors.py
app/services/: cache_service.py  conversation_memory.py  elasticsearch_service.py  neural_searcher.py  openai_service.py  qdrant_service.py  query_processor.py  semantic_cache_service.py
data/: product_description.txt  sustainability_article.txt  tech_article.txt  tutorial_guide.txt
es_testing/: es_quickstart.py
scripts/: README.md  prepare_data.py  upload_to_qdrant.py
tutorials/test_fastapi/: main.py
tutorials/test_qdrant/: qdrant_test.py
