[tool.poetry]
name = "my-rag-system"
version = "0.1.0"
description = ""
authors = ["Kienfuzzy <kdt226@lehigh.edu>"]
readme = "README.md"

packages = [
	{ include = "app" }
]


[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.121.2"
uvicorn = "^0.38.0"
pydantic = "^2.12.4"
pydantic-settings = "^2.12.0"
python-multipart = "^0.0.20"
qdrant-client = "^1.16.0"
sentence-transformers = "^5.1.2"
numpy = "^2.3.5"
pandas = "^2.3.3"
tqdm = "^4.67.1"
langchain-community = "^0.4.1"
langchain = "^1.0.7"
unstructured = "^0.18.20"
openai = "^2.8.0"
streamlit = "^1.51.0"
python-dotenv = "^1.2.1"
requests = "^2.32.5"
dotenv = "^0.9.9"
poetry = "^2.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
